<resources>
    <string name="app_name">News App</string>
    <string name="title_headlines">Headlines</string>
    <string name="title_category">Category</string>
    <string name="title_search">Search</string>
    <string name="article_image">Article Image not available</string>
    <string name="article_description">Article description not available</string>
    <string name="article_title">Article Title</string>
    <string name="powered_by_news_api">Powered by News API</string>
    <string name="source_not_available">Source not available</string>
    <string name="source">Source :</string>
    <string name="published_at">Published at :</string>
    <string name="publish_time_not_available">Publish time not available</string>
    <string name="save_button">Save Button</string>
    <string name="delete_button">Delete Button</string>
    <string name="saved">Saved</string>
    <string name="search">Search</string>
    <string name="select_the_news_category">Select the news category</string>
    <string name="settings">Settings</string>
    <string name="credits">Credits</string>
    <string name="menu_options">Menu Options</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="anant_raman">Anant Raman</string>
    <string name="anantraman_india_gmail_com">anantraman.india@gmail.com</string>
    <string name="select_your_country">Select your country</string>
    <string name="delete_all">Delete All</string>
    <string name="back_button">Back Button</string>
    <string name="next_last">Next Last</string>
    <string name="next_button">Next Button</string>
    <string name="last_button">Last Button</string>
    <string name="confirm_fingerprint">Confirm fingerprint to delete all</string>
    <string name="cancel">Cancel</string>
    <string name="news_app">NEWS APP</string>
    <string name="category">Category</string>
    <string name="url">URL</string>
    <string name="language">Language</string>
    <string name="nationality">Nationality</string>
    <string name="no_available_sources_in_the_selected_country">No available sources in the selected country</string>
    <string name="check_our_sources">Check our sources</string>
</resources>