<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_headlines">

    <fragment
        android:id="@+id/navigation_headlines"
        android:name="com.example.newsapp.ui.headlines.HeadlineFragment"
        android:label="@string/title_headlines"
        tools:layout="@layout/fragment_headline" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.example.newsapp.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.newsapp.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.example.newsapp.ui.saved.SavedNewsFragment"
        android:label="@string/saved"
        tools:layout="@layout/fragment_saved_news" />
</navigation>