<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="title"
            type="String" />

        <variable
            name="description"
            type="String" />

        <variable
            name="source"
            type="String" />

        <variable
            name="published"
            type="String" />

    </data>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_8"
        app:cardCornerRadius="@dimen/dp_8"
        app:strokeColor="@color/colorPrimaryDark"
        app:strokeWidth="0.5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_article_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_144"
                android:contentDescription="@string/article_image"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_image_grey_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_article_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_16"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/article_title"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_article_image" />

            <TextView
                android:id="@+id/tv_article_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_4"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/article_description"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_article_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_article_description">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.85"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/source_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_label_source"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_16"
                            android:layout_marginLeft="@dimen/dp_16"
                            android:layout_marginTop="@dimen/dp_4"
                            android:text="@string/source"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/sp_16"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_article_title" />

                        <TextView
                            android:id="@+id/tv_source"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_4"
                            android:layout_marginLeft="@dimen/dp_16"
                            android:layout_marginTop="@dimen/dp_4"
                            android:layout_marginEnd="@dimen/dp_16"
                            android:layout_marginRight="@dimen/dp_16"
                            android:text="@string/source_not_available"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/sp_16"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_article_title" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/published_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/source_layout">

                        <TextView
                            android:id="@+id/tv_label_published"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_16"
                            android:layout_marginLeft="@dimen/dp_16"
                            android:layout_marginTop="@dimen/dp_4"
                            android:text="@string/published_at"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/sp_16"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_article_title" />

                        <TextView
                            android:id="@+id/tv_published"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_4"
                            android:layout_marginLeft="@dimen/dp_4"
                            android:layout_marginTop="@dimen/dp_4"
                            android:layout_marginEnd="@dimen/dp_16"
                            android:layout_marginRight="@dimen/dp_16"
                            android:layout_marginBottom="@dimen/dp_16"
                            android:text="@string/publish_time_not_available"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/sp_16"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_article_title" />
                    </LinearLayout>
                </LinearLayout>

                <ImageButton
                    android:id="@+id/btn_delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_8"
                    android:layout_weight="0.15"
                    android:background="@color/colorWhite"
                    android:contentDescription="@string/delete_button"
                    android:padding="@dimen/dp_8"
                    android:src="@drawable/ic_baseline_delete_24" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>