<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh_updates">

    <data>
        <variable
            name="viewmodel"
            type="com.example.newsapp.ui.headlines.viewmodel.HeadlineViewModel" />

        <variable
            name="pageNumber"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/headline_toolbar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toStartOf="@id/menu_btn"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:titleTextColor="@color/colorWhite" />

                    <ImageButton
                        android:id="@+id/menu_btn"
                        android:layout_width="@dimen/dp_48"
                        android:layout_height="@dimen/dp_48"
                        android:layout_marginEnd="@dimen/dp_8"
                        android:background="@color/colorPrimary"
                        android:contentDescription="@string/menu_options"
                        android:src="@drawable/ic_baseline_menu_open_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/dp_66"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_news"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_8"
                        android:nestedScrollingEnabled="false"
                        tools:itemCount="2"
                        tools:listitem="@layout/item_article" />

                    <ImageButton
                        android:id="@+id/btn_first"
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:src="@drawable/ic_baseline_first_page_24"
                        android:layout_below="@+id/rv_news"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="@dimen/dp_16"
                        android:layout_marginTop="@dimen/dp_16"
                        android:background="@color/colorWhite"
                        android:backgroundTint ="@color/colorPrimary"
                        android:contentDescription="@string/last_button" />

                    <ImageButton
                        android:id="@+id/btn_prev"
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:src="@drawable/ic_baseline_arrow_back_24"
                        android:layout_below="@+id/rv_news"
                        android:layout_toEndOf="@+id/btn_first"
                        android:layout_marginStart="@dimen/dp_8"
                        android:layout_marginTop="@dimen/dp_16"
                        android:background="@color/colorWhite"
                        android:backgroundTint ="@color/colorPrimary"
                        android:contentDescription="@string/back_button" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@{pageNumber}"
                        android:textSize="@dimen/sp_16"
                        android:layout_marginTop="@dimen/dp_16"
                        android:layout_toEndOf="@id/btn_prev"
                        android:layout_toStartOf="@id/btn_next"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:layout_below="@id/rv_news"/>

                    <ImageButton
                        android:id="@+id/btn_next"
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:src="@drawable/ic_baseline_arrow_forward_24"
                        android:layout_below="@+id/rv_news"
                        android:layout_toStartOf="@id/btn_last"
                        android:layout_marginEnd="@dimen/dp_8"
                        android:layout_marginTop="@dimen/dp_16"
                        android:background="@color/colorWhite"
                        android:backgroundTint ="@color/colorPrimary"
                        android:contentDescription="@string/next_button" />

                    <ImageButton
                        android:id="@+id/btn_last"
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:src="@drawable/ic_baseline_last_page_24"
                        android:layout_below="@+id/rv_news"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/dp_16"
                        android:layout_marginTop="@dimen/dp_16"
                        android:background="@color/colorWhite"
                        android:backgroundTint ="@color/colorPrimary"
                        android:contentDescription="@string/next_last" />


                    <TextView
                        android:id="@+id/tv_attribution"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/btn_prev"
                        android:layout_marginStart="@dimen/dp_16"
                        android:layout_marginTop="@dimen/dp_16"
                        android:layout_marginEnd="@dimen/dp_16"
                        android:layout_marginBottom="@dimen/dp_60"
                        android:gravity="center_horizontal"
                        android:text="@string/powered_by_news_api"
                        android:textAlignment="center"
                        android:textSize="@dimen/sp_16" />

                </RelativeLayout>

            </ScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <ProgressBar
            android:id="@+id/headline_progbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>