<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.bottomsheet.SettingBottomSheet">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_your_country"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"/>

        <Spinner
            android:id="@+id/setCountrySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:padding="@dimen/dp_4"
            android:textSize="@dimen/sp_20"
            android:layout_marginTop="@dimen/dp_8"
            app:layout_constraintTop_toBottomOf="@id/tv_country"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_8"
            android:background="@color/colorWhite"
            android:elevation="@dimen/dp_8"
            app:cardCornerRadius="@dimen/dp_8"
            app:layout_constraintTop_toBottomOf="@id/setCountrySpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="0.5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16">

                <TextView
                    android:id="@+id/tv_developer_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:text="@string/anant_raman"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintBottom_toTopOf="@id/tv_email"
                    app:layout_constraintEnd_toStartOf="@id/civ_github"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginRight="@dimen/dp_16" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:text="@string/anantraman_india_gmail_com"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_developer_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/civ_github"
                    android:layout_marginRight="@dimen/dp_16" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:src="@drawable/ic_github_black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/civ_linkedIn"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginRight="@dimen/dp_16" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_linkedIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_linkedin_color_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>